<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarGasto">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <Button
                android:id="@+id/BregistrarGasto_volver"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/vector_arrow_back" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gestionarte"
                android:textColor="@color/secundaryColor"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="100dp"
                android:text="Registra tu gasto!"
                android:textColor="@color/secundaryColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="5dp"
                android:paddingVertical="50dp">

                <EditText
                    android:id="@+id/ETregistrarGasto_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/nombre_de_la_compra"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp"
                    android:textColor="@color/secundaryColor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ETregistrarGasto_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/monto_gastado"
                    android:inputType="number"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp"
                    android:textColor="@color/secundaryColor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ETregistrarGasto_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/fecha_del_gasto"
                    android:inputType="date"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp"
                    android:textColor="@color/secundaryColor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ETregistrarGasto_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/descripcion_del_gasto"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp"
                    android:textColor="@color/secundaryColor"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/BregistroGasto_register"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/button_default"
                    android:text="@string/registrar"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>