<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesion">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <Button
                android:id="@+id/BiniciarSesion_volver"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/vector_logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gestionarte"
                android:textColor="@color/secundaryColor"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="661dp"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bienvenido!"
                android:textColor="@color/terciarColor"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Inicia sesión para continuar."
                android:textColor="@color/secundaryColor"
                android:textSize="25sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <EditText
                    android:id="@+id/ETiniciarSesion_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/vector_user"
                    android:drawablePadding="12sp"
                    android:hint="@string/usuario"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/secundaryColor"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/ETiniciarSesion_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:drawableStart="@drawable/vector_lock"
                    android:drawablePadding="12sp"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:textColor="@color/secundaryColor"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/BiniciarSesion_inciarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/button_default"
                    android:text="@string/iniciar_sesion"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp" />


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>